--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@unocss/preset-web-fonts": "^0.57.7",
     "@unocss/transformer-variant-group": "^0.57.7",
     "@unocss/webpack": "^0.57.7",
     "eslint": "^8",
