--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends":"../../tsconfig.json",
   "compilerOptions": {
+    "paths": {
+      "@/*": ["./apps/api/*"]
+    },
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
