--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "strict": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "incremental": true,
