--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@iconify-json/ph": "^1.1.8",
     "@tanstack/react-query": "^5.12.2",
     "@ts-rest/core": "^3.30.5",
     "axios": "^1.6.2",
