--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,12 +20,14 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
     "@prisma/client": "5.6.0",
+    "@supabase/supabase-js": "^2.39.0",
     "@ts-rest/core": "^3.30.5",
     "@ts-rest/nest": "^3.30.5",
     "@ts-rest/open-api": "^3.30.5",
     "bcrypt": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "uploadthing": "^6.0.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
