--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "socket.io-client": "^4.7.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
