--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,15 +18,19 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.2.10",
     "@nestjs/swagger": "^7.1.16",
+    "@nestjs/websockets": "^10.2.10",
     "@prisma/client": "5.6.0",
     "@supabase/supabase-js": "^2.39.0",
     "@ts-rest/core": "^3.30.5",
     "@ts-rest/nest": "^3.30.5",
     "@ts-rest/open-api": "^3.30.5",
     "bcrypt": "^5.1.1",
+    "ioredis": "^5.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2",
     "uploadthing": "^6.0.3",
     "zod": "^3.22.4"
   },
