--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,10 +23,9 @@
     "@nestjs/websockets": "^10.2.10",
     "@prisma/client": "5.6.0",
     "@supabase/supabase-js": "^2.39.0",
-    "@ts-rest/core": "^3.30.5",
-    "@ts-rest/nest": "^3.30.5",
-    "@ts-rest/open-api": "^3.30.5",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "ioredis": "^5.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
