--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends":"../../tsconfig.json",
+  
   "compilerOptions": {
+    "strictPropertyInitialization": false,
     "paths": {
       "@/*": ["./apps/api/*"]
     },
